test/langtools/tools/javac/unnamed/UnnamedErrors.out
UnnamedErrors.java:6:17: compiler.err.underscore.as.identifier
UnnamedErrors.java:7:18: compiler.err.underscore.as.identifier
UnnamedErrors.java:8:23: compiler.err.underscore.as.identifier
UnnamedErrors.java:9:19: compiler.err.underscore.as.identifier
4 errors
